--- a/notebooks/3A-linreg-manual.ipynb
+++ b/notebooks/3A-linreg-manual.ipynb
@@ -46,31 +46,11 @@
     },
     {
       "cell_type": "code",
-<<<<<<< HEAD
-      "execution_count": 6,
-      "metadata": {
-        "id": "nqszP7-4w-bk"
-      },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'ipywidgets'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      2\u001b[39m np.set_printoptions(precision=\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mipywidgets\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mwidgets\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'ipywidgets'"
-          ]
-        }
-      ],
-=======
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "nqszP7-4w-bk"
       },
       "outputs": [],
->>>>>>> 376a57c87af4b2ff864957766788f3207233f0cb
       "source": [
         "import numpy as np\n",
         "np.set_printoptions(precision=3)\n",
@@ -91,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "GnE1RSOVw-bl",
         "outputId": "3679e800-3d6b-44f5-85a6-8b678f801f7f",
@@ -169,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "5WS12Njnw-bn"
       },
@@ -192,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "5_i-S5vWw-bn",
         "outputId": "8232f280-4a7d-4bc3-f057-dc1b5c8e1caf",
@@ -231,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "t8AlfHVAw-bo",
         "outputId": "4943cdfd-5911-43e9-9a8d-1e8aae63913c",
@@ -283,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "0ZbjS9piw-bp",
         "outputId": "63042a66-08fa-4f4a-d84d-222d26ae4395",
@@ -337,7 +317,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "VQYiEOuvw-bp",
         "outputId": "d53b4b6d-e33a-4afa-f583-837b7e9c0201",
@@ -385,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "YdMV5Pt-w-bp",
         "outputId": "6c071fcf-5e07-4312-c2e7-d7493d17991d",
@@ -422,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "AWmksNF-w-bq",
         "outputId": "5e4b054f-79b0-4a07-9f62-bc1baf68bfcc",
@@ -481,7 +461,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "p_iEt5NWw-by",
         "outputId": "1c9d4e1d-2c56-4341-ec53-ea2c6fa51ec7",
@@ -515,10 +495,10 @@
         "\n",
         "Can you define the following terms?\n",
         "\n",
-        "- Forward pass: process by which data passes through the input layer to the output layer\n",
-        "- Loss: the difference between the model's prediction and the true value\n",
-        "- optimizer: algorithm designed to minimize loss\n",
-        "- \"Fitting\" a model: to optimize it to a certain dataset\n"
+        "- Forward pass: _process by which data passes through the input layer to the output layer_\n",
+        "- Loss: _the difference between the model's prediction and the true value_\n",
+        "- optimizer: _algorithm designed to minimize loss_\n",
+        "- \"Fitting\" a model: _to optimize it to a certain dataset_\n"
       ]
     },
     {
